# automa-o-apis-delivery

./: .env.example  .gitignore  .vercelignore  DEPLOY_VERCEL.md  HOMOLOGACAO.md  README.md  ROTEIRO_GRAVACAO_HOMOLOGACAO.md  enviar_github.bat  iniciar.bat  pyproject.toml  requirements.txt  vercel.json
_handoff_extraido/automa-o-de-cat-logo-ifood-cajupar/: README.md
cerebro-sistema/: 2026-07-23.md  🧠 Cérebro do Sistema.md
cerebro-sistema/.obsidian/: appearance.json  graph.json  workspace.json
cerebro-sistema/nos/: .__init__() (2).md  .__init__().md  .broadcast().md  .connect().md  .constructor().md  .disconnect().md  .getderivedstatefromerror().md  .render().md  @types_react-dom.md  @types_react.md  @vitejs_plugin-react.md  [ate, setate].md  [carregando, setcarregando] (2).md  [carregando, setcarregando].md  [colsvisiveis, setcolsvisiveis].md  [colunasabertas, setcolunasabertas].md  [data, setdata].md  [de, setde].md  (+491 more)
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  COMPASS.md  DOMAINS.md  GRAPH_REPORT.md  graph.compact.txt  graph.html  graph.json  intelligence.json  manifest.json  metadata.json
scripts/: descobrir_lojas.py  gerar_cerebro.py  hook_cerebro.py  requirements.txt
server/: __init__.py  app.py
sistema-pedidos/: .gitignore
sql/: 002_criar_tabela_perfis.sql  003_criar_tabela_lojas.sql  004_flag_senha_temporaria.sql  005_delta_auditoria.sql  006_criar_tabelas_pedidos_eventos.sql  007_lojas_multiplataforma.sql  008_auditoria_por_loja.sql
viewer/: .env.example  BRIEFING_REDESIGN.md  CLAUDE.md  package.json
(+414 files in other folders)
